[gd_scene load_steps=11 format=2]

[ext_resource path="res://models/dock/dock.glb" type="PackedScene" id=1]
[ext_resource path="res://scenes/entities/dock/DockingStation.gd" type="Script" id=2]
[ext_resource path="res://scenes/entities/indicator/IndicatorArrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui-bits/Alert.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=4]
resource_name = "Enter"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 0, 0, -20 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Entrance/IndicatorArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Exit"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Entrance/IndicatorArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Entrance/IndicatorArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -8, 0, 2, -7, 2, 3, -7, 0, 3, -8, 0, 2, -8, 2, 2, -7, 2, 3, 4, 0, 4, 7, 2, 4, 7, 0, 4, 4, 0, 4, 4, 2, 4, 7, 2, 4, 7, 0, 4, 8, 2, 3, 8, 0, 3, 7, 0, 4, 7, 2, 4, 8, 2, 3, -4, 0, -4, -7, 2, -4, -7, 0, -4, -4, 0, -4, -4, 2, -4, -7, 2, -4, -4, 0, 3, -3, 2, 4, -3, 0, 4, -4, 0, 3, -4, 2, 3, -3, 2, 4, 8, 0, 3, 8, 2, 0, 8, 0, 0, 8, 0, 3, 8, 2, 3, 8, 2, 0, -7, 0, -4, -8, 2, -3, -8, 0, -3, -7, 0, -4, -7, 2, -4, -8, 2, -3, -3, 0, 4, 0.0182, 2, 4, 0.0182, 0, 4, -3, 0, 4, -3, 2, 4, 0.0182, 2, 4, 7, 0, -3, 4, 2, -3, 4, 0, -3, 7, 0, -3, 7, 2, -3, 4, 2, -3, -8, 0, -3, -8, 2, 0, -8, 0, 0, -8, 0, -3, -8, 2, -3, -8, 2, 0, 8, 0, 0, 8, 2, -2, 8, 0, -2, 8, 0, 0, 8, 2, 0, 8, 2, -2, -7, 0, 3, -4, 2, 3, -4, 0, 3, -7, 0, 3, -7, 2, 3, -4, 2, 3, 4, 0, -3, 3, 2, -4, 3, 0, -4, 4, 0, -3, 4, 2, -3, 3, 2, -4, 8, 0, -2, 7, 2, -3, 7, 0, -3, 8, 0, -2, 8, 2, -2, 7, 2, -3, -8, 0, 0, -8, 2, 2, -8, 0, 2, -8, 0, 0, -8, 2, 0, -8, 2, 2, 3, 0, -4, 0.0182, 2, -4, 0.0182, 0, -4, 3, 0, -4, 3, 2, -4, 0.0182, 2, -4, -3.5996, 2.5, 0, 0.0167, 2.5, -3.6, 0.0167, 2.5, 0, -3.5996, 2.5, 0, -3.5996, 2.5, -3.6, 0.0167, 2.5, -3.6, 0.0167, 2.5, 3.6, 3.6004, 2.5, 0, 3.6004, 2.5, 3.6, 0.0167, 2.5, 3.6, 0.0167, 2.5, 0, 3.6004, 2.5, 0, 7.2004, 2.5, 0, 3.6004, 2.5, 3.6, 3.6004, 2.5, 0, 3.6004, 2.5, 3.6, 7.2004, 2.5, 2.7, 6.3004, 2.5, 3.6, 3.6004, 2.5, 3.6, 7.2004, 2.5, 0, 7.2004, 2.5, 2.7, -6.2996, 2.5, 2.7, -3.5996, 2.5, 0, -3.5996, 2.5, 2.7, -3.5996, 2.5, 0, -7.1996, 2.5, 1.8, -7.1996, 2.5, 0, -3.5996, 2.5, 0, -6.2996, 2.5, 2.7, -7.1996, 2.5, 1.8, 6.3004, 2.5, -2.7, 3.6004, 2.5, 0, 3.6004, 2.5, -2.7, 3.6004, 2.5, 0, 7.2004, 2.5, -1.8, 7.2004, 2.5, 0, 3.6004, 2.5, 0, 6.3004, 2.5, -2.7, 7.2004, 2.5, -1.8, -7.1996, 2.5, 0, -3.5996, 2.5, -3.6, -3.5996, 2.5, 0, -3.5996, 2.5, -3.6, -7.1996, 2.5, -2.7, -6.2996, 2.5, -3.6, -3.5996, 2.5, -3.6, -7.1996, 2.5, 0, -7.1996, 2.5, -2.7, -3.5996, -0.5, 0, 0.0167, -0.5, -3.6, -3.5996, -0.5, -3.6, -3.5996, -0.5, 0, 0.0167, -0.5, 0, 0.0167, -0.5, -3.6, 3.6004, -0.5, 0, 0.0167, -0.5, -3.6, 0.0167, -0.5, 0, 0.0167, -0.5, -3.6, 3.6004, -0.5, -2.7, 2.7004, -0.5, -3.6, 0.0167, -0.5, -3.6, 3.6004, -0.5, 0, 3.6004, -0.5, -2.7, 0.0167, -0.5, 3.6, 3.6004, -0.5, 0, 0.0167, -0.5, 0, 0.0167, -0.5, 3.6, 3.6004, -0.5, 3.6, 3.6004, -0.5, 0, -2.6996, -0.5, 3.6, -3.5996, -0.5, 0, -3.5996, -0.5, 2.7, -3.5996, -0.5, 0, 0.0167, -0.5, 3.6, 0.0167, -0.5, 0, -3.5996, -0.5, 0, -2.6996, -0.5, 3.6, 0.0167, -0.5, 3.6, 3.6004, -0.5, 3.6, 7.2004, -0.5, 0, 3.6004, -0.5, 0, 7.2004, -0.5, 0, 6.3004, -0.5, 3.6, 7.2004, -0.5, 2.7, 7.2004, -0.5, 0, 3.6004, -0.5, 3.6, 6.3004, -0.5, 3.6, -3.5996, -0.5, 0, -6.2996, -0.5, 2.7, -3.5996, -0.5, 2.7, -6.2996, -0.5, 2.7, -7.1996, -0.5, 0, -7.1996, -0.5, 1.8, -6.2996, -0.5, 2.7, -3.5996, -0.5, 0, -7.1996, -0.5, 0, 3.6004, -0.5, 0, 6.3004, -0.5, -2.7, 3.6004, -0.5, -2.7, 6.3004, -0.5, -2.7, 7.2004, -0.5, 0, 7.2004, -0.5, -1.8, 6.3004, -0.5, -2.7, 3.6004, -0.5, 0, 7.2004, -0.5, 0, -3.5996, -0.5, -3.6, -7.1996, -0.5, 0, -3.5996, -0.5, 0, -7.1996, -0.5, 0, -6.2996, -0.5, -3.6, -7.1996, -0.5, -2.7, -7.1996, -0.5, 0, -3.5996, -0.5, -3.6, -6.2996, -0.5, -3.6, -3.5996, 2.5, 0, 0.0167, 2.5, 0, -3.5996, 2.5, 2.7, -3.5996, 2.5, 2.7, 0.0167, 2.5, 0, -2.6996, 2.5, 3.6, 0.0167, 2.5, 3.6, -2.6996, 2.5, 3.6, 0.0167, 2.5, 0, 0.0167, 2.5, 0, 3.6004, 2.5, -2.7, 3.6004, 2.5, 0, 3.6004, 2.5, -2.7, 0.0167, 2.5, 0, 2.7004, 2.5, -3.6, 0.0167, 2.5, 0, 0.0167, 2.5, -3.6, 2.7004, 2.5, -3.6, -8, 0, -3, -6.2996, -0.5, -3.6, -7, 0, -4, -8, 0, -3, -7.1996, -0.5, -2.7, -6.2996, -0.5, -3.6, 8, 0, 0, 7.2004, -0.5, 2.7, 8, 0, 3, 8, 0, 0, 7.2004, -0.5, 0, 7.2004, -0.5, 2.7, -3, 0, 4, -3.5996, -0.5, 2.7, -4, 0, 3, -3, 0, 4, -2.6996, -0.5, 3.6, -3.5996, -0.5, 2.7, -7, 0, -4, -3.5996, -0.5, -3.6, -4, 0, -4, -7, 0, -4, -6.2996, -0.5, -3.6, -3.5996, -0.5, -3.6, 8, 0, 3, 6.3004, -0.5, 3.6, 7, 0, 4, 8, 0, 3, 7.2004, -0.5, 2.7, 6.3004, -0.5, 3.6, 7, 0, 4, 3.6004, -0.5, 3.6, 4, 0, 4, 7, 0, 4, 6.3004, -0.5, 3.6, 3.6004, -0.5, 3.6, -7, 0, 3, -7.1996, -0.5, 1.8, -8, 0, 2, -7, 0, 3, -6.2996, -0.5, 2.7, -7.1996, -0.5, 1.8, 7, 2, -3, 3.6004, 2.5, -2.7, 4, 2, -3, 7, 2, -3, 6.3004, 2.5, -2.7, 3.6004, 2.5, -2.7, -3, 2, 4, 0.0167, 2.5, 3.6, 0.0182, 2, 4, -3, 2, 4, -2.6996, 2.5, 3.6, 0.0167, 2.5, 3.6, -7, 2, -4, -7.1996, 2.5, -2.7, -8, 2, -3, -7, 2, -4, -6.2996, 2.5, -3.6, -7.1996, 2.5, -2.7, 8, 2, 3, 7.2004, 2.5, 0, 8, 2, 0, 8, 2, 3, 7.2004, 2.5, 2.7, 7.2004, 2.5, 0, -4, 2, 3, -2.6996, 2.5, 3.6, -3, 2, 4, -4, 2, 3, -3.5996, 2.5, 2.7, -2.6996, 2.5, 3.6, -4, 2, -4, -6.2996, 2.5, -3.6, -7, 2, -4, -4, 2, -4, -3.5996, 2.5, -3.6, -6.2996, 2.5, -3.6, 7, 2, 4, 7.2004, 2.5, 2.7, 8, 2, 3, 7, 2, 4, 6.3004, 2.5, 3.6, 7.2004, 2.5, 2.7, 4, 2, 4, 6.3004, 2.5, 3.6, 7, 2, 4, 4, 2, 4, 3.6004, 2.5, 3.6, 6.3004, 2.5, 3.6, -8, 2, -3, -7.1996, 2.5, 0, -8, 2, 0, -8, 2, -3, -7.1996, 2.5, -2.7, -7.1996, 2.5, 0, 8, 2, 0, 7.2004, 2.5, -1.8, 8, 2, -2, 8, 2, 0, 7.2004, 2.5, 0, 7.2004, 2.5, -1.8, -7, 2, 3, -3.5996, 2.5, 2.7, -4, 2, 3, -7, 2, 3, -6.2996, 2.5, 2.7, -3.5996, 2.5, 2.7, 4, 2, -3, 2.7004, 2.5, -3.6, 3, 2, -4, 4, 2, -3, 3.6004, 2.5, -2.7, 2.7004, 2.5, -3.6, 8, 2, -2, 6.3004, 2.5, -2.7, 7, 2, -3, 8, 2, -2, 7.2004, 2.5, -1.8, 6.3004, 2.5, -2.7, -8, 2, 0, -7.1996, 2.5, 1.8, -8, 2, 2, -8, 2, 0, -7.1996, 2.5, 0, -7.1996, 2.5, 1.8, 3, 2, -4, 0.0167, 2.5, -3.6, 0.0182, 2, -4, 3, 2, -4, 2.7004, 2.5, -3.6, 0.0167, 2.5, -3.6, -8, 2, 2, -6.2996, 2.5, 2.7, -7, 2, 3, -8, 2, 2, -7.1996, 2.5, 1.8, -6.2996, 2.5, 2.7, 0.0182, 0, 4, -2.6996, -0.5, 3.6, -3, 0, 4, 0.0182, 0, 4, 0.0167, -0.5, 3.6, -2.6996, -0.5, 3.6, 4, 0, -3, 6.3004, -0.5, -2.7, 7, 0, -3, 4, 0, -3, 3.6004, -0.5, -2.7, 6.3004, -0.5, -2.7, -8, 0, 0, -7.1996, -0.5, -2.7, -8, 0, -3, -8, 0, 0, -7.1996, -0.5, 0, -7.1996, -0.5, -2.7, 8, 0, -2, 7.2004, -0.5, 0, 8, 0, 0, 8, 0, -2, 7.2004, -0.5, -1.8, 7.2004, -0.5, 0, -4, 0, 3, -6.2996, -0.5, 2.7, -7, 0, 3, -4, 0, 3, -3.5996, -0.5, 2.7, -6.2996, -0.5, 2.7, 3, 0, -4, 3.6004, -0.5, -2.7, 4, 0, -3, 3, 0, -4, 2.7004, -0.5, -3.6, 3.6004, -0.5, -2.7, 7, 0, -3, 7.2004, -0.5, -1.8, 8, 0, -2, 7, 0, -3, 6.3004, -0.5, -2.7, 7.2004, -0.5, -1.8, -8, 0, 2, -7.1996, -0.5, 0, -8, 0, 0, -8, 0, 2, -7.1996, -0.5, 1.8, -7.1996, -0.5, 0, 0.0182, 0, -4, 2.7004, -0.5, -3.6, 3, 0, -4, 0.0182, 0, -4, 0.0167, -0.5, -3.6, 2.7004, -0.5, -3.6, 4, 2, 4, 0.0167, 2.5, 3.6, 3.6004, 2.5, 3.6, 4, 2, 4, 0.0182, 2, 4, 0.0167, 2.5, 3.6, 0.0182, 0, 4, 3.6004, -0.5, 3.6, 0.0167, -0.5, 3.6, 0.0182, 0, 4, 4, 0, 4, 3.6004, -0.5, 3.6, -3.5996, -0.5, -3.6, 0.0182, 0, -4, -4, 0, -4, -3.5996, -0.5, -3.6, 0.0167, -0.5, -3.6, 0.0182, 0, -4, -4, 2, -4, 0.0167, 2.5, -3.6, -3.5996, 2.5, -3.6, -4, 2, -4, 0.0182, 2, -4, 0.0167, 2.5, -3.6, 0.0182, 2, -4, -4, 0, -4, -4, 2, -4, 0.0182, 2, -4, 0.0182, 0, -4, -4, 0, -4, 0.0182, 2, 4, 4, 0, 4, 4, 2, 4, 0.0182, 2, 4, 0.0182, 0, 4, 4, 0, 4, 0.0182, 0, 4, 0.0182, 2, 5, 0.0182, 0, 6, 0.0182, 0, 4, 0.0182, 2, 4, 0.0182, 2, 5, -4, 0, -6, -4, 2, -4, -4, 0, -4, -4, 0, -6, -4, 2, -5, -4, 2, -4, 0.0182, 0, -4, 0.0182, 2, -5, 0.0182, 0, -6, 0.0182, 0, -4, 0.0182, 2, -4, 0.0182, 2, -5, 4, 0, 6, 4, 2, 4, 4, 0, 4, 4, 0, 6, 4, 2, 5, 4, 2, 4, 0.0182, 2, 5, 4, 2, 4, 4, 2, 5, 0.0182, 2, 5, 0.0182, 2, 4, 4, 2, 4, 4, 0, 6, 0.0182, 0, 4, 0.0182, 0, 6, 4, 0, 6, 4, 0, 4, 0.0182, 0, 4, 0.0182, 2, -5, -4, 2, -4, -4, 2, -5, 0.0182, 2, -5, 0.0182, 2, -4, -4, 2, -4, 0.0182, 0, -6, -4, 0, -4, 0.0182, 0, -4, 0.0182, 0, -6, -4, 0, -6, -4, 0, -4 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.5, 0.8, 0.2 )

[sub_resource type="SpatialMaterial" id=3]
metallic = 1.0
roughness = 0.6
emission_enabled = true
emission = Color( 0.0784314, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="DockingStation" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 4 )
anims/Exit = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="dock" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Entrance" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 4.6 )

[node name="CollisionShape" type="CollisionShape" parent="Entrance"]
shape = SubResource( 1 )

[node name="IndicatorArrow" parent="Entrance" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 1 )
visible = false
material_override = SubResource( 3 )

[node name="Exit" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -4.6 )

[node name="CollisionShape" type="CollisionShape" parent="Exit"]
shape = SubResource( 1 )

[node name="HUDToast" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Entrance" to="." method="_on_Entrance_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
